Fixed overflow on home page

--- a/src/pages/Home/styles.scss
+++ b/src/pages/Home/styles.scss
@@ -5,12 +5,12 @@
     align-items: center;
     flex-direction: column;
     min-width: 100%;
-    min-height: 100vh;
+    max-height: 80vh;
     max-width: 900px;
-    margin-top: 55px;
+    padding-top: 225px;
 
     @media screen and (max-width: 900px) {
-        padding-top: 150px;
+        padding-top: 185px;
     }
 
     .navigate-button {
